<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="app1_name">POPULAR MOVIES</string>
    <string name="app2_name">SCORES APP</string>
    <string name="app3_name">LIBRARY APP</string>
    <string name="app4_name">BUILD IT BIGGER</string>
    <string name="app5_name">BACON READER</string>
    <string name="app6_name">CAPSTONE: MY OWN APP</string>
    <string name="button_message">This button will launch my %1$s!</string>
</resources>
